# FileChest

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/gtk/: file_element.rs  gui_model.rs  list_element.rs  main.rs  messages.rs
src/gui/: main.rs
src/gui_gtk/: file_element.rs  gui_model.rs  main.rs  messages.rs
