[package]
name = "file-chest"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
glob = "0.3.1"
gtk = { version = "0.4.8", package = "gtk4" }
iced = "0.7.0"
iced_lazy = "0.4.0"
iced_native = "0.8.0"
relm4 = "0.4.4"
relm4-components = "0.4.4"
relm4-macros = "0.4.4"

[[bin]]
name = "file_chest_gtk"
path = "src/gtk/main.rs"

#[[bin]]
#name = "file_chest_gui"
#path = "src/gui/main.rs"

[lib]
name = "file_chest"
path = "src/lib.rs"
